// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/helpers/merge-note => datasync old (before December, 2017) specific format for tags 1`] = `
Object {
  "attachmentOrder": Array [
    "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
  ],
  "attachments": Object {
    "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb": Object {
      "antivirus_status": "clean",
      "comment_ids": Object {
        "private_resource": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
        "public_resource": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      },
      "created": "2019-05-15T16:17:08+00:00",
      "exif": Object {
        "date_time": "2019-03-09T08:58:19+00:00",
      },
      "file": "https://downloader.dst.yandex.net/disk/bfbdd4f92b03341545522487b9628d8962feafb3c5530ebd07fa002a7b061f37/5cdd6267/G-mOq4IGM5OejoMdg-m-4eWo5Q9Fh8kDVJb71Jv75_ruIkIQNf6rcBDFxR191fVNL4GIbykqlGn48OK-S7IIPw%3D%3D?uid=4004236641&filename=9sq8e1n62mspf5uy9fn6a&disposition=attachment&hash=&limit=0&content_type=image%2Fjpeg&fsize=2151787&hid=ec4e0ba0e7af5c15049e2b81b9279061&media_type=image&tknv=v2&etag=33bc412fee05436240b38be8f50f1706",
      "md5": "33bc412fee05436240b38be8f50f1706",
      "media_type": "image",
      "mime_type": "image/jpeg",
      "modified": "2019-05-15T16:17:08+00:00",
      "name": "9sq8e1n62mspf5uy9fn6a",
      "path": "notes:/4004236641_82_884/9sq8e1n62mspf5uy9fn6a",
      "preview": "https://downloader.dst.yandex.ru/preview/43d90bdbfcbd5f038fb1e124680beb54627c63d77f37c9de9a8db87ba2a698fb/inf/3HBUlA-wVdmlRjMjVe_vWdxEj4UWTkDGieIti27qlQf0EO8EEqbENL_QKiYOgGnht7HIY58BvjEVMNwLFkmcBg%3D%3D?uid=4004236641&filename=9sq8e1n62mspf5uy9fn6a&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=S&crop=1",
      "resourceId": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      "resource_id": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      "revision": 1557937028647183,
      "sha256": "f1432e9eb25121b9b5966efa5d2564721a09fb1c0d12cf3b61c5eedef781901d",
      "size": 2151787,
      "state": "loaded",
      "type": "file",
    },
  },
  "content": Object {
    "data": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": "1134323456789",
            },
          ],
          "name": "paragraph",
        },
      ],
      "name": "$root",
    },
    "revision": 3,
    "state": "loaded",
  },
  "ctime": "2019-05-15T16:17:08.098Z",
  "id": "4004236641_82_884",
  "mtime": "2019-05-16T13:21:11.000Z",
  "snippet": "new snippet",
  "tags": Object {
    "pin": true,
  },
  "title": "new title",
}
`;

exports[`src/helpers/merge-note => datasync specific format for tags and attachments 1`] = `
Object {
  "attachmentOrder": Array [
    "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
  ],
  "attachments": Object {
    "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb": Object {
      "antivirus_status": "clean",
      "comment_ids": Object {
        "private_resource": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
        "public_resource": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      },
      "created": "2019-05-15T16:17:08+00:00",
      "exif": Object {
        "date_time": "2019-03-09T08:58:19+00:00",
      },
      "file": "https://downloader.dst.yandex.net/disk/bfbdd4f92b03341545522487b9628d8962feafb3c5530ebd07fa002a7b061f37/5cdd6267/G-mOq4IGM5OejoMdg-m-4eWo5Q9Fh8kDVJb71Jv75_ruIkIQNf6rcBDFxR191fVNL4GIbykqlGn48OK-S7IIPw%3D%3D?uid=4004236641&filename=9sq8e1n62mspf5uy9fn6a&disposition=attachment&hash=&limit=0&content_type=image%2Fjpeg&fsize=2151787&hid=ec4e0ba0e7af5c15049e2b81b9279061&media_type=image&tknv=v2&etag=33bc412fee05436240b38be8f50f1706",
      "md5": "33bc412fee05436240b38be8f50f1706",
      "media_type": "image",
      "mime_type": "image/jpeg",
      "modified": "2019-05-15T16:17:08+00:00",
      "name": "9sq8e1n62mspf5uy9fn6a",
      "path": "notes:/4004236641_82_884/9sq8e1n62mspf5uy9fn6a",
      "preview": "https://downloader.dst.yandex.ru/preview/43d90bdbfcbd5f038fb1e124680beb54627c63d77f37c9de9a8db87ba2a698fb/inf/3HBUlA-wVdmlRjMjVe_vWdxEj4UWTkDGieIti27qlQf0EO8EEqbENL_QKiYOgGnht7HIY58BvjEVMNwLFkmcBg%3D%3D?uid=4004236641&filename=9sq8e1n62mspf5uy9fn6a&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=S&crop=1",
      "resourceId": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      "resource_id": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      "revision": 1557937028647183,
      "sha256": "f1432e9eb25121b9b5966efa5d2564721a09fb1c0d12cf3b61c5eedef781901d",
      "size": 2151787,
      "state": "loaded",
      "type": "file",
    },
  },
  "content": Object {
    "data": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": "1134323456789",
            },
          ],
          "name": "paragraph",
        },
      ],
      "name": "$root",
    },
    "revision": 3,
    "state": "loaded",
  },
  "ctime": "2019-05-15T16:17:08.098Z",
  "id": "4004236641_82_884",
  "mtime": "2019-05-16T13:21:10.000Z",
  "snippet": "new snippet",
  "tags": Object {
    "pin": true,
  },
  "title": "new title",
}
`;

exports[`src/helpers/merge-note => should add new attachments if got some from backend 1`] = `
Object {
  "attachmentOrder": Array [
    "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
    "new-attachment",
  ],
  "attachments": Object {
    "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb": Object {
      "antivirus_status": "clean",
      "comment_ids": Object {
        "private_resource": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
        "public_resource": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      },
      "created": "2019-05-15T16:17:08+00:00",
      "exif": Object {
        "date_time": "2019-03-09T08:58:19+00:00",
      },
      "file": "https://downloader.dst.yandex.net/disk/bfbdd4f92b03341545522487b9628d8962feafb3c5530ebd07fa002a7b061f37/5cdd6267/G-mOq4IGM5OejoMdg-m-4eWo5Q9Fh8kDVJb71Jv75_ruIkIQNf6rcBDFxR191fVNL4GIbykqlGn48OK-S7IIPw%3D%3D?uid=4004236641&filename=9sq8e1n62mspf5uy9fn6a&disposition=attachment&hash=&limit=0&content_type=image%2Fjpeg&fsize=2151787&hid=ec4e0ba0e7af5c15049e2b81b9279061&media_type=image&tknv=v2&etag=33bc412fee05436240b38be8f50f1706",
      "md5": "33bc412fee05436240b38be8f50f1706",
      "media_type": "image",
      "mime_type": "image/jpeg",
      "modified": "2019-05-15T16:17:08+00:00",
      "name": "9sq8e1n62mspf5uy9fn6a",
      "path": "notes:/4004236641_82_884/9sq8e1n62mspf5uy9fn6a",
      "preview": "https://downloader.dst.yandex.ru/preview/43d90bdbfcbd5f038fb1e124680beb54627c63d77f37c9de9a8db87ba2a698fb/inf/3HBUlA-wVdmlRjMjVe_vWdxEj4UWTkDGieIti27qlQf0EO8EEqbENL_QKiYOgGnht7HIY58BvjEVMNwLFkmcBg%3D%3D?uid=4004236641&filename=9sq8e1n62mspf5uy9fn6a&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=S&crop=1",
      "resourceId": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      "resource_id": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      "revision": 1557937028647183,
      "sha256": "f1432e9eb25121b9b5966efa5d2564721a09fb1c0d12cf3b61c5eedef781901d",
      "size": 2151787,
      "state": "loaded",
      "type": "file",
    },
    "new-attachment": Object {
      "resourceId": "new-attachment",
      "state": "initial",
    },
  },
  "content": Object {
    "data": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": "1134323456789",
            },
          ],
          "name": "paragraph",
        },
      ],
      "name": "$root",
    },
    "revision": 3,
    "state": "loaded",
  },
  "ctime": "2019-05-15T16:17:08.098Z",
  "id": "4004236641_82_884",
  "mtime": "2019-05-16T13:21:08.000Z",
  "snippet": "1134323456789",
  "tags": Object {
    "pin": true,
  },
  "title": " — копия",
}
`;

exports[`src/helpers/merge-note => should merge note 1`] = `
Object {
  "attachmentOrder": Array [
    "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
  ],
  "attachments": Object {
    "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb": Object {
      "antivirus_status": "clean",
      "comment_ids": Object {
        "private_resource": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
        "public_resource": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      },
      "created": "2019-05-15T16:17:08+00:00",
      "exif": Object {
        "date_time": "2019-03-09T08:58:19+00:00",
      },
      "file": "https://downloader.dst.yandex.net/disk/bfbdd4f92b03341545522487b9628d8962feafb3c5530ebd07fa002a7b061f37/5cdd6267/G-mOq4IGM5OejoMdg-m-4eWo5Q9Fh8kDVJb71Jv75_ruIkIQNf6rcBDFxR191fVNL4GIbykqlGn48OK-S7IIPw%3D%3D?uid=4004236641&filename=9sq8e1n62mspf5uy9fn6a&disposition=attachment&hash=&limit=0&content_type=image%2Fjpeg&fsize=2151787&hid=ec4e0ba0e7af5c15049e2b81b9279061&media_type=image&tknv=v2&etag=33bc412fee05436240b38be8f50f1706",
      "md5": "33bc412fee05436240b38be8f50f1706",
      "media_type": "image",
      "mime_type": "image/jpeg",
      "modified": "2019-05-15T16:17:08+00:00",
      "name": "9sq8e1n62mspf5uy9fn6a",
      "path": "notes:/4004236641_82_884/9sq8e1n62mspf5uy9fn6a",
      "preview": "https://downloader.dst.yandex.ru/preview/43d90bdbfcbd5f038fb1e124680beb54627c63d77f37c9de9a8db87ba2a698fb/inf/3HBUlA-wVdmlRjMjVe_vWdxEj4UWTkDGieIti27qlQf0EO8EEqbENL_QKiYOgGnht7HIY58BvjEVMNwLFkmcBg%3D%3D?uid=4004236641&filename=9sq8e1n62mspf5uy9fn6a&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=S&crop=1",
      "resourceId": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      "resource_id": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      "revision": 1557937028647183,
      "sha256": "f1432e9eb25121b9b5966efa5d2564721a09fb1c0d12cf3b61c5eedef781901d",
      "size": 2151787,
      "state": "loaded",
      "type": "file",
    },
  },
  "content": Object {
    "data": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": "1134323456789",
            },
          ],
          "name": "paragraph",
        },
      ],
      "name": "$root",
    },
    "revision": 3,
    "state": "loaded",
  },
  "ctime": "2019-05-15T16:17:08.098Z",
  "id": "4004236641_82_884",
  "mtime": "2019-05-16T13:21:06.293Z",
  "snippet": "new snippet",
  "tags": Object {
    "pin": true,
  },
  "title": "new title",
}
`;

exports[`src/helpers/merge-note => should not remove creating attachments and should not add new while attachments creating 1`] = `
Object {
  "attachmentOrder": Array [
    "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
    "creating-attachment-1",
    "creating-attachment-2",
  ],
  "attachments": Object {
    "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb": Object {
      "antivirus_status": "clean",
      "comment_ids": Object {
        "private_resource": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
        "public_resource": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      },
      "created": "2019-05-15T16:17:08+00:00",
      "exif": Object {
        "date_time": "2019-03-09T08:58:19+00:00",
      },
      "file": "https://downloader.dst.yandex.net/disk/bfbdd4f92b03341545522487b9628d8962feafb3c5530ebd07fa002a7b061f37/5cdd6267/G-mOq4IGM5OejoMdg-m-4eWo5Q9Fh8kDVJb71Jv75_ruIkIQNf6rcBDFxR191fVNL4GIbykqlGn48OK-S7IIPw%3D%3D?uid=4004236641&filename=9sq8e1n62mspf5uy9fn6a&disposition=attachment&hash=&limit=0&content_type=image%2Fjpeg&fsize=2151787&hid=ec4e0ba0e7af5c15049e2b81b9279061&media_type=image&tknv=v2&etag=33bc412fee05436240b38be8f50f1706",
      "md5": "33bc412fee05436240b38be8f50f1706",
      "media_type": "image",
      "mime_type": "image/jpeg",
      "modified": "2019-05-15T16:17:08+00:00",
      "name": "9sq8e1n62mspf5uy9fn6a",
      "path": "notes:/4004236641_82_884/9sq8e1n62mspf5uy9fn6a",
      "preview": "https://downloader.dst.yandex.ru/preview/43d90bdbfcbd5f038fb1e124680beb54627c63d77f37c9de9a8db87ba2a698fb/inf/3HBUlA-wVdmlRjMjVe_vWdxEj4UWTkDGieIti27qlQf0EO8EEqbENL_QKiYOgGnht7HIY58BvjEVMNwLFkmcBg%3D%3D?uid=4004236641&filename=9sq8e1n62mspf5uy9fn6a&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&tknv=v2&size=S&crop=1",
      "resourceId": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      "resource_id": "4004236641:dfaa90adda13936277499ce48dff318b453451a5a3bd53351ac280b5eeeb11cb",
      "revision": 1557937028647183,
      "sha256": "f1432e9eb25121b9b5966efa5d2564721a09fb1c0d12cf3b61c5eedef781901d",
      "size": 2151787,
      "state": "loaded",
      "type": "file",
    },
    "creating-attachment-1": Object {
      "state": "creating",
    },
    "creating-attachment-2": Object {
      "state": "creating",
    },
  },
  "content": Object {
    "data": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": "1134323456789",
            },
          ],
          "name": "paragraph",
        },
      ],
      "name": "$root",
    },
    "revision": 3,
    "state": "loaded",
  },
  "ctime": "2019-05-15T16:17:08.098Z",
  "id": "4004236641_82_884",
  "mtime": "2019-05-16T13:21:14.000Z",
  "newAttachments": Array [
    "some-new-attach-id",
  ],
  "snippet": "1134323456789",
  "tags": Object {
    "pin": true,
  },
  "title": " — копия",
}
`;

exports[`src/helpers/merge-note => should remove attachments if got none from backend 1`] = `
Object {
  "attachmentOrder": Array [],
  "attachments": Object {},
  "content": Object {
    "data": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "data": "1134323456789",
            },
          ],
          "name": "paragraph",
        },
      ],
      "name": "$root",
    },
    "revision": 3,
    "state": "loaded",
  },
  "ctime": "2019-05-15T16:17:08.098Z",
  "id": "4004236641_82_884",
  "mtime": "2019-05-16T13:21:07.000Z",
  "snippet": "1134323456789",
  "tags": Object {
    "pin": true,
  },
  "title": " — копия",
}
`;

exports[`src/helpers/merge-note => when new note has come 1`] = `
Object {
  "attachmentOrder": Array [],
  "attachments": Object {},
  "content": Object {
    "data": null,
    "state": "initial",
  },
  "ctime": "2019-05-16T13:21:15.000Z",
  "id": undefined,
  "mtime": "2019-05-16T13:21:15.000Z",
  "snippet": "snippet",
  "tags": Object {},
  "title": "title",
}
`;
